force-app/main/default/objects/clofor_com_cfs__InventoryLog__c/clofor_com_cfs__InventoryLog__c.object-meta.xml
<CustomObject>
    <label>INV Log</label>
    <nameField>
        <displayFormat>INLG-{000000}</displayFormat>
        <label>INVENTORY LOG ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INV Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>