force-app/main/default/objects/clofor_com_cfs__InventoryLog__c/fields/clofor_com_cfs__CompoundId__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CompoundId__c</fullName>
    <formula>CASESAFEID(clofor_com_cfs__FacilityID__c) &amp; &apos;-&apos; &amp;  CASESAFEID(clofor_com_cfs__ProductID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compound ID</label>
    <type>Text</type>
</CustomField>