force-app/main/default/objects/clofor_com_cfs__InventoryLog__c/fields/clofor_com_cfs__FacilityName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FacilityName__c</fullName>
    <formula>clofor_com_cfs__FacilityID__r.clofor_com_cfs__FacilityName__c</formula>
    <label>Facility Name</label>
    <type>Text</type>
</CustomField>