force-app/main/default/objects/clofor_com_cfs__InventoryLog__c/fields/clofor_com_cfs__InventoryReportCreated__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InventoryReportCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Report Created</label>
    <type>Checkbox</type>
</CustomField>