force-app/main/default/objects/clofor_com_cfs__InventoryLog__c/fields/clofor_com_cfs__ProductID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>clofor_com_cfs__PRODUCT__c</referenceTo>
    <relationshipName>StockCounting</relationshipName>
    <type>Lookup</type>
</CustomField>