force-app/main/default/objects/clofor_com_cfs__InventoryLog__c/fields/clofor_com_cfs__Replenishment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Replenishment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replenishment</label>
    <referenceTo>clofor_com_cfs__Replenishment__c</referenceTo>
    <relationshipLabel>INVENTORY LOG</relationshipLabel>
    <relationshipName>InventoryLog</relationshipName>
    <type>Lookup</type>
</CustomField>