force-app/main/default/objects/clofor_com_cfs__InventoryLog__c/fields/clofor_com_cfs__StockOutQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StockOutQuantity__c</fullName>
    <label>Stock-Out Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>