force-app/main/default/objects/clofor_com_cfs__InventoryLog__c/fields/clofor_com_cfs__StockQuantityOnHand__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StockQuantityOnHand__c</fullName>
    <formula>clofor_com_cfs__StartStockQuantity__c 
+
 clofor_com_cfs__StockInQuantity__c 
-
 clofor_com_cfs__StockOutQuantity__c
+
 clofor_com_cfs__ReconcileQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Quantity On Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>