force-app/main/default/objects/clofor_com_cfs__InventoryLog__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>clofor_com_cfs__FacilityID__c</columns>
    <columns>clofor_com_cfs__StartStockQuantity__c</columns>
    <columns>clofor_com_cfs__StockInQuantity__c</columns>
    <columns>clofor_com_cfs__StockOutQuantity__c</columns>
    <columns>clofor_com_cfs__ReconcileQuantity__c</columns>
    <columns>clofor_com_cfs__StockQuantityOnHand__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>